--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   cloud_firestore: ^6.0.1
   firebase_core: ^4.1.0
+  connectivity_plus: ^7.0.0
+  fluttertoast: ^8.2.12
+  flutter_spinkit: ^5.2.2
 
 dev_dependencies:
   flutter_test:
